--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story.fish – Premium Domain For Sale</title>
-    <meta name="description" content="Story.fish is a premium, memorable domain now available for purchase. The perfect name for your next storytelling, publishing, or creative project.">
+    <title>CarSupplies.com – Premium Domain For Sale</title>
+    <meta name="description" content="CarSupplies.com is a premium, memorable domain now available for purchase. The perfect name for your next automotive, e-commerce, or parts and accessories business.">
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
@@ -14,7 +14,7 @@
             color: #223040;
         }
         header {
-            background: #2a4d77;
+            background: #234e23;
             color: #fff;
             padding: 2.1rem 0 1.4rem 0;
             text-align: center;
@@ -27,28 +27,28 @@
         header p {
             margin: 0.7rem 0 0 0;
             font-size: 1.18rem;
-            color: #b2c6e6;
+            color: #b7e1b7;
         }
         main {
             max-width: 700px;
             margin: 2.5rem auto;
             background: #fff;
             border-radius: 12px;
-            box-shadow: 0 4px 24px rgba(42,77,119,0.09);
+            box-shadow: 0 4px 24px rgba(35,78,35,0.09);
             padding: 2.5rem 2rem 2rem 2rem;
         }
         .for-sale {
             text-align: center;
             font-size: 2.1rem;
             margin-bottom: 2rem;
-            color: #2a4d77;
+            color: #234e23;
             font-weight: 700;
         }
         .features {
             margin: 2rem 0;
         }
         .features h2 {
-            color: #2a4d77;
+            color: #234e23;
             font-size: 1.17rem;
             margin-bottom: 1rem;
         }
@@ -63,7 +63,7 @@
         }
         .features li::before {
             content: "✔";
-            color: #36c0f3;
+            color: #3fcf3f;
             font-size: 1.1em;
             position: absolute;
             left: 0;
@@ -71,12 +71,12 @@
         .inquiry-form-section {
             margin: 2.5rem 0 0 0;
             padding: 1.7rem 1.1rem 1.1rem 1.1rem;
-            background: #e7f3fa;
+            background: #e9f8e9;
             border-radius: 9px;
         }
         .inquiry-form-section h3 {
             margin-top: 0;
-            color: #2a4d77;
+            color: #234e23;
             font-size: 1.12rem;
             text-align: center;
             margin-bottom: 1.08rem;
@@ -85,11 +85,11 @@
             text-align: center;
             margin-bottom: 1.7rem;
             font-size: 1.13rem;
-            color: #2a4d77;
+            color: #234e23;
             font-style: italic;
         }
         .info-article a {
-            color: #36c0f3;
+            color: #3fcf3f;
             text-decoration: underline;
         }
         form.inquiry-form {
@@ -101,14 +101,14 @@
         }
         .inquiry-form label {
             font-size: 1rem;
-            color: #2a4d77;
+            color: #234e23;
             margin-bottom: 0.2rem;
             font-weight: 500;
         }
         .inquiry-form input,
         .inquiry-form textarea {
             padding: 0.7rem;
-            border: 1px solid #b6d7f3;
+            border: 1px solid #b8e3b8;
             border-radius: 5px;
             font-size: 1rem;
             background: #f8fafc;
@@ -119,7 +119,7 @@
             max-height: 220px;
         }
         .inquiry-form input[type="submit"] {
-            background: #36c0f3;
+            background: #3fcf3f;
             color: #fff;
             border: none;
             font-size: 1.1rem;
@@ -130,18 +130,18 @@
             margin-top: 0.3rem;
         }
         .inquiry-form input[type="submit"]:hover {
-            background: #2a4d77;
+            background: #234e23;
         }
         .thanks-message {
             display: none;
             text-align: center;
-            color: #2a4d77;
+            color: #234e23;
             font-weight: bold;
             margin-top: 1.1rem;
         }
         footer {
             text-align: center;
-            color: #8eb6db;
+            color: #90ca90;
             font-size: 0.9rem;
             padding: 1.6rem 0 0.7rem 0;
         }
@@ -163,28 +163,28 @@
 </head>
 <body>
     <header>
-        <h1>Story.fish</h1>
-        <p>The Perfect Domain for Storytelling, Publishing, or Creative Projects</p>
+        <h1>CarSupplies.com</h1>
+        <p>The Perfect Domain for Automotive Parts, Accessories, or E-commerce</p>
     </header>
     <main>
         <div class="for-sale">This premium domain is <strong>for sale</strong>!</div>
         <section class="features">
-            <h2>Why Own Story.fish?</h2>
+            <h2>Why Own CarSupplies.com?</h2>
             <ul>
-                <li>Ultra-memorable, playful, and brandable for any storytelling venture</li>
-                <li>Ideal for creative writing platforms, publishing startups, content communities, or story-driven brands</li>
-                <li>Unique and modern .fish extension for maximum recall and originality</li>
-                <li>Boosts brand credibility and marketability in literary, education, or entertainment spaces</li>
-                <li>Perfect for agencies, digital creators, or established media businesses expanding their online presence</li>
+                <li>Extremely memorable, trustworthy, and brandable for the automotive industry</li>
+                <li>Ideal for car parts retailers, accessories shops, e-commerce startups, or B2B suppliers</li>
+                <li>Iconic .com extension for global credibility and recognition</li>
+                <li>Boosts SEO, customer trust, and marketability in the competitive auto market</li>
+                <li>Perfect for established businesses, agencies, or entrepreneurs expanding online</li>
             </ul>
         </section>
         <div class="info-article">
             Learn more: <a href="https://corelli.com/domains.html" target="_blank" rel="noopener">How to choose a great domain</a>
         </div>
         <section class="inquiry-form-section" id="inquiry-form">
-            <h3>Contact Us About Story.fish</h3>
-            <form class="inquiry-form" action="https://formspree.io/f/xnndevlz" method="POST" autocomplete="on">
-                <input type="hidden" name="_redirect" value="https://Story.fish/thank-you.html">
+            <h3>Contact Us About CarSupplies.com</h3>
+            <form class="inquiry-form" action="https://formspree.io/f/mqaqrbjw" method="POST" autocomplete="on">
+                <input type="hidden" name="_redirect" value="https://CarSupplies.com/thank-you.html">
                 <label for="name">Name *</label>
                 <input type="text" name="name" id="name" required autocomplete="name">
 
@@ -205,7 +205,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2025 Story.fish &ndash; This domain is for sale.
+        &copy; 2025 CarSupplies.com &ndash; This domain is for sale.
     </footer>
     <script>
         // Optional: show a thank you message after submission using AJAX (Formspree supports this)
@@ -221,7 +221,7 @@
                 headers: { 'Accept': 'application/json' }
             }).then(function(response) {
                 if (response.ok) {
-                    window.location.href = "https://Story.fish/thank-you.html";
+                    window.location.href = "https://CarSupplies.com/thank-you.html";
                 } else {
                     response.json().then(function(data){
                         alert(data.error || 'Oops! There was a problem submitting your form');
