--- a/thank-you.html
+++ b/thank-you.html
@@ -36,7 +36,7 @@
   <div class="thank-you">
     <h1>Thank you for your submission.</h1>
     <p>While we are not able to reply to all inquires, we will certainly give thought to your submission!</p>
-    <div class="domain">Story.fish</div>
+    <div class="domain">CarSupplies.com</div>
   </div>
 </body>
 </html>
